k8s/datomic-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: datomic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ventas
      tier: database
  template:
    metadata:
      labels:
        app: ventas
        tier: database
    spec:
      containers:
      - image: YOUR_IMAGE
        name: datomic
        ports:
        - containerPort: 4334
        - containerPort: 4335
        - containerPort: 4336
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: YOUR_PULL_SECRET
status: {}
