k8s/datomic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datomic
spec:
  selector:
    app: ventas
    tier: database
  ports:
  - name: "4334"
    port: 4334
    targetPort: 4334
  - name: "4335"
    port: 4335
    targetPort: 4335
  - name: "4336"
    port: 4336
    targetPort: 4336
status:
  loadBalancer: {}
