k8s/ventas-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ventas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "YOUR_CLUSTER_ISSUER"
spec:
  rules:
  - host: YOUR_HOST
    http:
      paths:
      - path: /
        backend:
          serviceName: ventas
          servicePort: 80
  tls:
  - secretName: ventas-tls-cert
    hosts:
    - YOUR_HOST
